fix summary scrollbar

--- a/css/inner-page.css
+++ b/css/inner-page.css
@@ -122,7 +122,7 @@ h2 {
     width:20%;
     height: calc(100vh - 102.5px);
     box-shadow: 0px 2px 5px #ececec;
-    position: relative;
+    position: sticky;
 }
 
 .content {
