--- a/css/summary.css
+++ b/css/summary.css
@@ -1,3 +1,8 @@
+body{
+    overflow: hidden;
+}
+
+
 #center-content {
     display: flex;
     justify-content: center;
@@ -5,6 +10,11 @@
     flex-direction: column;
     width: 100%;
     height: 89vh;
+}
+
+#summary-content{
+    overflow: scroll;
+    height: 92vh;
 }
 
 .centern {
